--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,8 +37,8 @@ jobs:
       - run: npm test
 
       - store_artifacts:
-          path: coverage
+          path: test
       - store_test_results:
-          path: coverage
+          path: test
 
 
